@@ -29,6 +29,7 @@
     <spotbugs.version>4.0.0-RC1</spotbugs.version>
     <spotbugs.fail>true</spotbugs.fail>
     <springboot.version>2.3.5.RELEASE</springboot.version>
+    <argLine>--add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED</argLine>
   </properties>
 
   <distributionManagement>
@@ -76,7 +77,7 @@
       <dependency>
         <groupId>org.mockito</groupId>
         <artifactId>mockito-core</artifactId>
-        <version>3.6.0</version>
+        <version>3.11.2</version>
         <scope>test</scope>
       </dependency>
     </dependencies>
