@@ -30,6 +30,9 @@
   <properties>
     <maven.deploy.skip>false</maven.deploy.skip>
     <grpc.version>1.39.0</grpc.version>
+    <argLine>
+      --add-opens java.base/java.util=ALL-UNNAMED
+    </argLine>
   </properties>
 
   <dependencies>
